Add case study pages & reduces the size of images

--- a/case_study_euni.html
+++ b/case_study_euni.html
@@ -56,7 +56,7 @@
                   <h1 class="case-study-title">Case Study: <span class="company-title">Eunimart</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/eunimart_img.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Breakthrough AI-powered cross border e-commerce platform Integration with over 15 established online marketplaces such as Amazon, ebay SMB customers across the globe 70+ employees</li>
