--- a/case_study_id.html
+++ b/case_study_id.html
@@ -52,11 +52,11 @@
     <!-- <main role="main"> -->
     <div class="container-fluid pt-5" id="">
         <div class="row py-5 px-5">
-            <div class="col-8 py-5 work-pointer description text-justify">
+            <div class="col-8 py-5 work-pointer description">
                   <h1 class="case-study-title">Case Study: <span class="company-title">Idea Device </span>(acquired by Nutanix)</h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/id_img.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Idea Device was a Runbook automation (RBA) company  funded by Sequoia capital and had 40+ employees. The  company was acquired by Nutanix and the product is  sold as Nutanix calm</li>
