--- a/case_study_renesas.html
+++ b/case_study_renesas.html
@@ -56,7 +56,7 @@
                   <h1 class="case-study-title">Case Study: <span class="company-title">Renesas Electronics</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/renesas_img.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Renesas Electronics, headquartered in Japan is a multi-billion dollar semiconductor solution provider. The  company has over 30,000 employees</li>
