--- a/case_study_tandberg.html
+++ b/case_study_tandberg.html
@@ -56,7 +56,7 @@
                   <h1 class="case-study-title">Case Study: <span class="company-title">Tandberg </span>(acquired by Cisco)</h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/tandberg_img.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Tandberg was a pioneer and world-leader in enterprise telepresence. Had ~$800M in revenues and 1450 employees when Cisco systems acquired the company</li>
