--- a/case_study_vyoma.html
+++ b/case_study_vyoma.html
@@ -56,7 +56,7 @@
                   <h1 class="case-study-title">Case Study: <span class="company-title">Vyoma Media</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/vyoma_img.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Company Proﬁle The leader in Indian digital signage space </li>
