--- a/culture.html
+++ b/culture.html
@@ -75,20 +75,32 @@
     <!-- First Section -->
     <div class="container">
         <div class="container-fluid">
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-4 p-5">
-                    <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/placeholder.png');"></div>
+                    <div class="row">
+                        <div class="col d-flex pl-5 justify-content-center">
+                            <img src="./img/culture/excellence.svg"/>
+                        </div>
+                    </div>
                      <h2 class="culture-title pt-3">EXCELLENCE</h2>
                     <h4 class="pl-4 text-center culture-content text-justify">We are committed to technical excellence in our work. We make sure that solutions we deliver are well tested, properly architected and highly performant. We consider every piece of software that we develop to be works of art which speak for themselves</h4>
                 </div>
                 <div class="col-md-4 p-5">
-                    <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/placeholder.png');"></div>
+                    <div class="row">
+                        <div class="col d-flex pl-5 justify-content-center">
+                            <img src="./img/culture/integrity.svg"/>
+                        </div>
+                    </div>
                      <h2 class="culture-title pt-3">INTEGRITY</h2>
                     <h4 class="pl-4 text-center culture-content text-justify">We're completely transparent about our skills and workflow with our clients. This gives our customers a clear window into how our team collaborates with them to deliver their projects</h4>
                 </div>
                 <div class="col-md-4 p-5">
-                    <div  class="ratio img-responsive rounded-circle" style="background-image: url('./img/placeholder.png');"></div>
-                     <h2 class="culture-title pt-3">EXCELLENCE</h2>
+                    <div class="row">
+                        <div class="col d-flex pl-5 justify-content-center">
+                            <img src="./img/culture/reliability.svg"/>
+                        </div>
+                    </div>
+                     <h2 class="culture-title pt-3">RELIABILITY</h2>
                     <h4 class="pl-4 text-center culture-content text-justify">We understand that our clients depend on us for timely delivery of high quality solutions and take this to heart. We make sure that all our clients can consider us to be an extension of their internal teams</h4>
                 </div>
             </div>
