--- a/work.html
+++ b/work.html
@@ -70,12 +70,13 @@
     <!-- Work Card -->
     <div class="container">
         <div class="row pt-5">
+
             <div class="col-md-6 pb-5">
                 <div class="card w-100">
-                    <img class="card-img-top pt-3" src="./img/work/qq.svg" width="50%" height="50%" alt="Card image cap">
+                    <img class="card-img-top py-3 px-3" src="./img/work/qq.svg" width="50%" height="50%" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title work-title">MAKING INDIA'S LEADING DATING APP SAFE</h5>
-                        <p class="card-text">Hamon worked with QuackQuack.in, one of India's leading dating apps, to protect their platform from malicious users using a custom AI/ML solution.</p>
+                        <h5 class="card-title work-title text-uppercase">MAKING INDIA'S LEADING DATING APP SAFE</h5>
+                        <p class="card-text">QuackQuack.in is a leading Indian dating app with more than 4M users. Hamon used AI and Machine Learning techniques to moderate content to ensure that new users signing up for the app are genuine thereby eliminating manual moderation and increasing safety of the app for users</p>
                         <a href="./case_study_qq.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
                     </div>
                 </div>
@@ -83,10 +84,10 @@
 
             <div class="col-md-6 pb-5">
                 <div class="card w-100">
-                    <img class="card-img-top pt-3" src="./img/work/vyoma.svg" width="50%" height="50%" alt="Card image cap">
+                    <img class="card-img-top py-3 px-3" src="./img/work/eunimart.svg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title work-title">INCREASING RELIABILITY OF SIGNBOARDS FOR A DIGITAL AD PROVIDER</h5>
-                        <p class="card-text">Vyoma Media serves digital ads at public locations throughout India on over 2000 screens.</p>
+                        <h5 class="card-title work-title text-uppercase">building the AI engine of a cross-border retail platform</h5>
+                        <p class="card-text">Eunimart promises to revolutionize cross-border retail by connecting small and medium businesses with markets. We built the infrastructure technologies and AI engine to power the platform</p>
                         <a href="./case_study_euni.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
                     </div>
                 </div>
@@ -94,22 +95,66 @@
 
             <div class="col-md-6 pb-5">
                 <div class="card w-100">
-                    <img class="card-img-top pt-3" src="./img/work/qq.svg" alt="Card image cap">
+                    <img class="card-img-top py-3 px-3" src="./img/work/vyoma.svg" width="50%" height="50%" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title work-title">MAKING INDIA'S LEADING DATING APP SAFE</h5>
-                        <p class="card-text">Hamon worked with QuackQuack.in, one of India's leading dating apps, to protect their platform from malicious users using a custom AI/ML solution.</p>
-                        <a href="./case_study_qq.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
+                        <h5 class="card-title work-title text-uppercase">INCREASING RELIABILITY OF SIGNBOARDS FOR A DIGITAL AD PROVIDER</h5>
+                        <p class="card-text">Vyoma media is a leader in the Indian digital signage space and serves digital ads at public locations throughout India on over 2000 screens. Hamon Technologies created an IoT connected solution to manage remote devices over limited bandwidth connections</p>
+                        <a href="./case_study_vyoma.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 pb-5">
                 <div class="card w-100">
-                    <img class="card-img-top pt-3" src="./img/work/vyoma.svg" alt="Card image cap">
+                    <img class="card-img-top py-3 px-3" src="./img/work/paisool.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title work-title">INCREASING RELIABILITY OF SIGNBOARDS FOR A DIGITAL AD PROVIDER</h5>
-                        <p class="card-text">Vyoma Media serves digital ads at public locations throughout India on over 2000 screens.</p>
-                        <a href="./case_study_qq.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
+                        <h5 class="card-title work-title text-uppercase">messaging library for peer-to-peer POS devices communications</h5>
+                        <p class="card-text">For Paisool.com that is a disruptor in FMCG retail segment, Hamon built a library for webRTC data channel to facilitate peer to peer connection of PoS devices</p>
+                        <a href="./case_study_paisool.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 pb-5">
+                <div class="card w-100">
+                    <img class="card-img-top py-3 px-3" src="./img/work/miab.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title work-title text-uppercase">Museum in a Box</h5>
+                        <p class="card-text">Founded by the chief designer of Fickr.com, Museum in a Box is a traditionalist approach to educate children through miniature replicas of museum artefacts. Hamon built the backend server to communicate with MIB hardware and manage them remotely</p>
+                        <a href="./case_study_miab.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 pb-5">
+                <div class="card w-100">
+                    <img class="card-img-top py-3 px-3" src="./img/work/tandberg.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title work-title text-uppercase">Tandberg</h5>
+                        <p class="card-text">For Tandberg, a world leader in telepresence, Hamon architected a software agent running on the camera that allowed tests to be automated eliminating the need for manual intervention</p>
+                        <a href="./case_study_tandberg.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 pb-5">
+                <div class="card w-100">
+                    <img class="card-img-top py-3 px-3" src="./img/work/id.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title work-title text-uppercase">Idea Device</h5>
+                        <p class="card-text">Idea Device, now part of Nutanix, was a runbook automation (RBA) company that needed a way to distribute complex multi-service application. Hamon designed and developed a packaging system equivalent to docker kind of containerization technology</p>
+                        <a href="./case_study_id.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 pb-5">
+                <div class="card w-100">
+                    <img class="card-img-top py-3 px-3" src="./img/work/renesas.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title work-title text-uppercase">Renesas</h5>
+                        <p class="card-text">Renesas Electronics, a leading semiconductor provider was looking to build an IoT device management solution for a new class of microcontrollers. Hamon built a library that could be linked with any embedded application to provide device management functionality</p>
+                        <a href="./case_study_renesas.html" class="btn read-more-btn pt-3"><span class="work-btn-text">READ MORE</span></a>
                     </div>
                 </div>
             </div>
