--- a/case_study_miab.html
+++ b/case_study_miab.html
@@ -56,7 +56,7 @@
                   <h1 class="case-study-title">Case Study: <span class="company-title">Museum In a Box</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/miab_img.png" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Edtech startup based out of London, UK founded  by George Oates (Chief designer of Flickr.com,  Director of openlibrary.org)</li>
