--- a/case_study_qq.html
+++ b/case_study_qq.html
@@ -56,7 +56,7 @@
                   <h1 class="case-study-title">Case Study: <span class="company-title">QuackQuack</span></h1>
                   <h4 class="offerings">Offerings: AI/ML</h4>
                   <div class="container">
-                      <img class="pb-5" src="./img/case_study/qq.png" width="100%">
+                      <img class="pb-5" src="./img/case_study/qq_img.jpg" width="100%">
                       <h3 class="heading">Company Profile</h3>
                       <ul>
                           <li>Leading Indian dating app with 4M users</li>
